fix image height issues in iOS safari (#2480)
* use i18n message when not showing image

* fix height for iOS

* some ui styling

* fix polygon draw in panzoom

* more ui styling and fixes

--- a/ts/image-occlusion/image-occlusion-base.scss
+++ b/ts/image-occlusion/image-occlusion-base.scss
@@ -17,3 +17,9 @@
 html {
     overflow: hidden;
 }
+
+/** consistent font size **/
+:root { --font-size: 16px; }
+body { 
+    font-size: 16px;
+}
